# Arcadium

./: Anchor.toml  Cargo.toml  MVP.md  PROGRAM.md  README.md
programs/arcadium/: Cargo.toml
programs/arcadium/src/: lib.rs
programs/arcadium/tests/: test.rs
services/opsmeeting-agent/: README.md  package.json
services/opsmeeting-agent/src/: server.js
skills/: opsmeeting-machine.skill.md
