[package]
name = "arcadium"
version = "0.1.0"
description = "Arcadium - AI Agent Marketplace on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arcadium"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

# Silence newer rust "unexpected cfg" warnings emitted by Anchor macros
custom-panic = []
custom-heap = []
anchor-debug = []

[dependencies]
anchor-lang = "0.30.1"
