[package]
name = "arcadium"
version = "0.1.0"
description = "Arcadium - AI Agent Marketplace on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arcadium"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

# Silence newer rust "unexpected cfg" warnings emitted by Anchor macros
custom-panic = []
custom-heap = []
anchor-debug = []

# Required for `anchor idl build`
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"

[dev-dependencies]
anyhow = "1"
sha2 = "0.10"
borsh = "0.10"
hex = "0.4"
solana-sdk = "1.18"
solana-program = "1.18"
# LiteSVM: fast in-process Solana VM for unit/integration testing
litesvm = "0.5"
