[package]
name = "arcadium"
version = "0.1.0"
description = "Arcadium - AI Agent Marketplace on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arcadium"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

# Silence newer rust "unexpected cfg" warnings emitted by Anchor macros
custom-panic = []
custom-heap = []
anchor-debug = []

# Required for `anchor idl build`
idl-build = ["anchor-lang/idl-build"]

[dependencies]
# Align with your newer stack
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }

[dev-dependencies]
anyhow = "1"
sha2 = "0.10.8"
borsh = "1.6.0"
hex = "0.4"

# Solana core (newer line)
solana-sdk = "3.0.0"
solana-program = "3.0.0"

# LiteSVM (newer, Solana 2+/3-compatible)
litesvm = "0.9.1"
# litesvm-token = "0.9.1"   # enable if/when we add token-program tests
